# libavionics

./: .gitignore  .gitmodules  CMakeLists.txt  build-deps.sh  quad.fsh  quad.vsh
demo/: CMakeLists.txt  app.c  app.h  gl.c  gl.h  main.c
demo/glad/: glad.c  glad.h
include/libavionics/: display.h  gl.h  glad.h  module.h  renderer.h  xplane.h
include/libmfd/: proj.h
lib/: .gitignore  build_deps.sh
src/: CMakeLists.txt  cmd.c  display.c  display.h  display_render.c  dref.c  gl.c  glad.c  module.c  render.c  renderer.c  xplane.c
